Add greeting header and maintain existing styles

--- a/index.html
+++ b/index.html
@@ -112,6 +112,8 @@ table, th, td{
 
         <h4>Negociar es mejor que ignorar</h4>
 
+        <h1>Hola Maestro Horacio</h1>
+
 
         <script>
 
@@ -130,3 +132,4 @@ table, th, td{
     
 </body>
 </html>
+
